# CrewAI_BookGenerator_EngUrdu

./: .env  README.md  book.docx  book.md  generated_book.docx  pyproject.toml
src/write_a_book_with_flows/: main.py
src/write_a_book_with_flows/crews/outline_book_crew/: outline_crew.py
src/write_a_book_with_flows/crews/outline_book_crew/config/: agents.yaml  tasks.yaml
src/write_a_book_with_flows/crews/write_book_chapter_crew/: write_book_chapter_crew.py
src/write_a_book_with_flows/crews/write_book_chapter_crew/config/: agents.yaml  tasks.yaml
src/write_a_book_with_flows/web/: app.py
